--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,19 @@ h1 {
   color: white;
 }
 input {
-  width: 500px;
+  width: 400px;
+}
+.scrollbar::-webkit-scrollbar {
+  width: 1em;
+}
+.scrollbar::-webkit-scrollbar-track {
+  /* box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+.scrollbar::-webkit-scrollbar-thumb {
+  background-color: lightblue;
+  border-radius: 10px;
 }
 /* .robo_card {
   background-color: lightblue;
