--- a/src/index.css
+++ b/src/index.css
@@ -21,17 +21,24 @@ h1 {
 input {
   width: 400px;
 }
+/* width */
 .scrollbar::-webkit-scrollbar {
   width: 1em;
 }
+/* Track */
 .scrollbar::-webkit-scrollbar-track {
   /* box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
   box-shadow: inset 0 0 5px grey; 
   border-radius: 10px;
 }
+/* Handle */
 .scrollbar::-webkit-scrollbar-thumb {
   background-color: lightblue;
   border-radius: 10px;
+}
+/* Handle on hover */
+.scrollbar::-webkit-scrollbar-thumb:hover {
+  background: rgb(99, 25, 129);
 }
 /* .robo_card {
   background-color: lightblue;
